# docs/swagger.json
@@ -1,19 +1,26 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "fetches the assets by user wallet address\none of the parameters walletAddress and x-wallet is mandatory and must be provided",
+        "title": "NFT PORTAL API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "email": "haluk.a.turan@gmail.com"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/listAssets/{walletAddress}": {
-            "get": {
-                "description": "fetches the assets by user wallet address\none of the parameters walletAddress and x-wallet is mandatory and must be provided",
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "operationId": "get-struct-array-by-string",
                 "parameters": [
                     {
                         "type": "string",
@@ -31,15 +38,81 @@
                         "type": "integer",
                         "description": "Offset",
                         "name": "offset",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "description": "asset params",
+                        "name": "asset-params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/opensea.GetAssetsParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "status = true, Code = 200",
+                        "schema": {
+                            "$ref": "#/definitions/model.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "status = true, Code = 400, Message = Provide a valid walletAddress",
+                        "schema": {
+                            "$ref": "#/definitions/model.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/listAssetsTest/{walletAddress}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Wallet Address",
+                        "name": "walletAddress",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Wallet Address",
+                        "name": "x-wallet",
+                        "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "description": "asset params",
+                        "name": "asset-params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/opensea.GetAssetsParams"
+                        }
                     }
                 ],
                 "responses": {
@@ -78,7 +151,7 @@
             "type": "object",
             "properties": {
                 "count": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "limit": {
                     "type": "integer"
@@ -97,6 +170,51 @@
                 "data": {},
                 "paging": {
                     "$ref": "#/definitions/model.Paging"
+                }
+            }
+        },
+        "opensea.GetAssetsParams": {
+            "description": "Asset listing params",
+            "type": "object",
+            "properties": {
+                "asset_contract_address": {
+                    "type": "string"
+                },
+                "asset_contract_addresses": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "collection": {
+                    "type": "string"
+                },
+                "collection_editor": {
+                    "type": "string"
+                },
+                "collection_slug": {
+                    "type": "string"
+                },
+                "cursor": {
+                    "type": "integer"
+                },
+                "include_orders": {
+                    "type": "boolean"
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "order_direction": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                },
+                "token_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         }
