# main.go
@@ -1,29 +1,48 @@
 package main
 
 import (
+	"log"
 	"nft-portal/model"
 	"os"
 
-	opensea "github.com/DevilsTear/opensea-go-api"
-	// _ "github.com/Devilstear/nft-portal/docs"
+	_ "nft-portal/docs"
+
+	"github.com/DevilsTear/opensea-go-api"
 	"github.com/iris-contrib/swagger/swaggerFiles"
 	"github.com/iris-contrib/swagger/v12"
+	"github.com/joho/godotenv"
 	"github.com/kataras/iris/v12"
 	"github.com/kataras/iris/v12/middleware/accesslog"
 )
 
+// @title           NFT PORTAL API
+// @version         1.0
+// @description     This api serves a hub to complate 3th party nft portal integrations
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   API Support
+// @contact.email  haluk.a.turan@gmail.com
+
+// @host      localhost:8080
+// @BasePath  /api/v1
 func main() {
+	err := godotenv.Load()
+	if err != nil {
+		log.Fatal("Error loading .env file")
+	}
+
 	ac := makeAccessLog()
 	defer ac.Close() // Close the underline file.
 
-	app := iris.Default()
+	app := iris.New()
 
-	apiV1 := app.Party("/openseaapi")
+	apiV1 := app.Party("/api/v1")
 	{
 		// apiV1.Use(iris.Compression)
 
 		// GET: http://localhost:8080/opensea
-		apiV1.Get("/listAssets/{walletAddress}", listAssets)
+		apiV1.Post("/listAssets/{walletAddress}", listAssets)
+		apiV1.Post("/listAssetsTest/{walletAddress}", listAssetsTest)
 		// // POST: http://localhost:8080/books
 		// apiV1.Post("/", create)
 
@@ -41,21 +60,23 @@ func main() {
 // listAssets
 // @Description fetches the assets by user wallet address
 // @Description one of the parameters walletAddress and x-wallet is mandatory and must be provided
-// @ID get-struct-array-by-string
+// @ID list_assets
+
 // @Accept  json
 // @Produce  json
-// @Param   walletAddress  	path    string     	false        "Wallet Address"
-// @Param   x-wallet  		header  string     	false        "Wallet Address"
-// @Param   offset     		query  	int     	true        "Offset"
-// @Param   limit      		query  	int     	true        "Limit"
+// @Param   walletAddress  			path    string     	false       "Wallet Address"
+// @Param   x-wallet  				header  string     	false       "Wallet Address"
+// @Param   offset     				query  	int     	false        "Offset"
+// @Param   limit      				query  	int     	false        "Limit"
+// @Param   asset-params	body  	opensea.GetAssetsParams     	true        "asset params"
 // @Success 200 {object} model.Result	"status = true, Code = 200"
 // @Failure 400 {object} model.Result "status = true, Code = 400, Message = Provide a valid walletAddress"
-// @Router /listAssets/{walletAddress} [get]
+// @Router /listAssets/{walletAddress} [post]
 func listAssets(ctx iris.Context) {
 	walletAddress := ctx.Params().Get("walletAddress")
-	offset, err := ctx.URLParamInt("offset")
-	if err != nil || offset < 0 {
-		offset = 1
+	cursor, err := ctx.URLParamInt("offset")
+	if err != nil || cursor < 0 {
+		cursor = 1
 	}
 	limit, err := ctx.URLParamInt("limit")
 	if err != nil || limit < 0 {
@@ -68,8 +89,8 @@ func listAssets(ctx iris.Context) {
 
 	response := model.Result{
 		Paging: model.Paging{
-			Offset: offset,
-			Limit:  limit,
+			Offset: &cursor,
+			Limit:  &limit,
 		},
 		APIStatus: model.APIStatus{
 			Status:  true,
@@ -81,6 +102,19 @@ func listAssets(ctx iris.Context) {
 	_, err = opensea.ParseAddress(walletAddress)
 	if err != nil {
 		// ctx.StopWithError(iris.StatusBadRequest, err)
+		// response.APIStatus = model.APIStatus{
+		// 	Status:  true,
+		// 	Code:    400,
+		// 	Message: err.Error(),
+		// }
+		// ctx.JSON(response)
+		// return
+		walletAddress = ""
+	}
+
+	params := opensea.GetAssetsParams{}
+	err = ctx.ReadJSON(&params)
+	if err != nil {
 		response.APIStatus = model.APIStatus{
 			Status:  true,
 			Code:    400,
@@ -90,9 +124,127 @@ func listAssets(ctx iris.Context) {
 		return
 	}
 
+	// if params.Owner == "" || params.Owner == opensea.NullAddress {
+	// 	params.Owner = opensea.Address(walletAddress)
+	// }
+
+	if *params.Limit <= 0 {
+		*params.Limit = 20
+	}
+
+	if params.Cursor != nil && *params.Cursor <= 0 {
+		*params.Cursor = 1
+	}
+
+	openseaAPI, err := opensea.NewOpensea(os.Getenv("OPENSEA_API_KEY"))
+	if err != nil {
+		// ctx.StopWithError(iris.StatusBadRequest, err)
+		response.APIStatus = model.APIStatus{
+			Status:  true,
+			Code:    400,
+			Message: err.Error(),
+		}
+		ctx.JSON(response)
+		return
+	}
+
+	assets, err := openseaAPI.GetAssets(params)
+	if err != nil {
+		// ctx.StopWithError(iris.StatusBadRequest, err)
+		response.APIStatus = model.APIStatus{
+			Status:  true,
+			Code:    400,
+			Message: err.Error(),
+		}
+		ctx.JSON(response)
+		return
+	}
+
+	response.Data = assets
+
+	ctx.JSON(response)
+}
+
+// listAssetsTest
+// @Description fetches the assets by user wallet address
+// @Description one of the parameters walletAddress and x-wallet is mandatory and must be provided
+// @ID list_assets
+
+// @Accept  json
+// @Produce  json
+// @Param   walletAddress  			path    string     	false       "Wallet Address"
+// @Param   x-wallet  				header  string     	false       "Wallet Address"
+// @Param   offset     				query  	int     	false        "Offset"
+// @Param   limit      				query  	int     	false        "Limit"
+// @Param   asset-params	body  	opensea.GetAssetsParams     	true        "asset params"
+// @Success 200 {object} model.Result	"status = true, Code = 200"
+// @Failure 400 {object} model.Result "status = true, Code = 400, Message = Provide a valid walletAddress"
+// @Router /listAssetsTest/{walletAddress} [post]
+func listAssetsTest(ctx iris.Context) {
+	walletAddress := ctx.Params().Get("walletAddress")
+	cursor, err := ctx.URLParamInt("offset")
+	if err != nil || cursor < 0 {
+		cursor = 1
+	}
+	limit, err := ctx.URLParamInt("limit")
+	if err != nil || limit < 0 {
+		limit = 20
+	}
+
+	if walletAddress == "" {
+		walletAddress = ctx.GetHeader("x-wallet")
+	}
+
+	response := model.Result{
+		Paging: model.Paging{
+			Offset: &cursor,
+			Limit:  &limit,
+		},
+		APIStatus: model.APIStatus{
+			Status:  true,
+			Code:    200,
+			Message: "Success",
+		},
+	}
+
+	_, err = opensea.ParseAddress(walletAddress)
+	if err != nil {
+		// ctx.StopWithError(iris.StatusBadRequest, err)
+		// response.APIStatus = model.APIStatus{
+		// 	Status:  true,
+		// 	Code:    400,
+		// 	Message: err.Error(),
+		// }
+		// ctx.JSON(response)
+		// return
+		walletAddress = ""
+	}
+
 	params := opensea.GetAssetsParams{}
-	ctx.ReadJSON(params)
-	openseaAPI, err := opensea.NewOpenseaRinkeby(walletAddress)
+	err = ctx.ReadJSON(&params)
+	if err != nil {
+		response.APIStatus = model.APIStatus{
+			Status:  true,
+			Code:    400,
+			Message: err.Error(),
+		}
+		ctx.JSON(response)
+		return
+	}
+
+	// if params.Owner == "" || params.Owner == opensea.NullAddress {
+	// 	params.Owner = opensea.Address(walletAddress)
+	// }
+
+	if params.Limit != nil && *params.Limit <= 0 {
+		*params.Limit = 20
+	}
+
+	if params.Cursor != nil && *params.Cursor <= 0 {
+		*params.Cursor = 1
+	}
+
+	openseaAPI, err := opensea.NewOpensea(os.Getenv("OPENSEA_API_KEY"))
 	if err != nil {
 		// ctx.StopWithError(iris.StatusBadRequest, err)
 		response.APIStatus = model.APIStatus{
@@ -154,4 +306,8 @@ func makeAccessLog() *accesslog.AccessLog {
 	// ac.SetFormatter(&accesslog.Template{Text: "{{.Code}}"})
 
 	return ac
+}
+
+func Ptr[T any](v T) *T {
+	return &v
 }
